--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,20 @@
   justify-content: center;
   align-items: center;
 }
+.background-screen {
+  background-image: url(../images/backgroundGame.jpg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 1280px;
+  height: 800px;
+  align-items: flex-end;
+  justify-content: center;
+  display: flex;
+}
 
 .start-screen {
-  background-image: url(../images/STARTpage.png);
+  background-image: url(../images/Start-page.png);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -18,7 +29,19 @@
 }
 
 .GameOver-screen {
-  background-image: url(../images/STARTpage.png);
+  background-image: url(../images/GAMEOVERpage.png);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 1000px;
+  height: 500px;
+  align-items: flex-end;
+  justify-content: center;
+  display: flex;
+}
+
+.Win-screen {
+  background-image: url(../images/GAMEOVERpage.png);
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
@@ -46,8 +69,8 @@
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
-  width: 1200px;
-  height: 550px;
+  width: 1280px;
+  height: 800px;
   justify-content: center;
   display: flex;
 }
@@ -125,4 +148,12 @@
     left: 1000px;
     top: 600px;
   }
+}
+
+.none {
+  visibility: hidden;
+}
+
+.ninja-bees {
+  background-image: url(../images/backgroundGame.jpg);
 }
